# loglikelihood

./: CMakeLists.txt  README.md  batch_loglikelihood.f90  compute_loglikelihood.f90  main_loglikelihood.f90  plot_lightcurves.py  plot_param_histograms.py
images/: parameter_loglikelihood_histograms.csv
